Major css update.

--- a/recipes/caramelizedpasta.html
+++ b/recipes/caramelizedpasta.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin</title>
+    <title>Caramelized onion pasta</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body style="background-color: #2C5D63;">
+<body>
 
-    <h1 style="color: #F7EEBB">Caramelized onion pasta</h1>
-    <a href="https://www.allrecipes.com/caramelized-onion-pasta-recipe-8733449" style="color: #A9C52F">Recipe website.</a>
+    <h1>Caramelized onion pasta</h1>
+    <a href="https://www.allrecipes.com/caramelized-onion-pasta-recipe-8733449">Recipe website.</a>
     <h1></h1>
     <img width="500" alt="Image of the final product." src="https://www.allrecipes.com/thmb/s6yaAIOG_R9gl9Tagwi0OWGm5hA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8733449_Caramelized-Onion-Pasta_Pat-Bernitt_4x3-bca65b41c4334deea938c808488d4ec3.jpg">
-    <h4 style="color: #F7EEBB">Delicious caramelized onion pasta for everyone (that likes onion...)</h4>
-    <p style="color: #A9C52F"">
+    <h4>Delicious caramelized onion pasta for everyone (that likes onion...)</h4>
+    <p>
 
         This caramelized onion pasta is a new and really different pasta dish that just<br>
         might become your new favorite. Sun-dried tomatoes and chili onion crunch<br>
@@ -21,8 +22,8 @@
 
     </p>
 
-    <h5 style="color: #F7EEBB">Ingredients:</h5>
-    <ul style="color: #A9C52F">
+    <h4>Ingredients:</h4>
+    <ul>
 
         <li>2 tablespoons olive oil</li>
         <li>2 tablespoons unsalted butter, divided</li>
@@ -38,8 +39,8 @@
 
     </ul>
 
-    <h5 style="color: #F7EEBB">Steps:</h5>
-    <ol style="color: #A9C52F">
+    <h4 >Steps:</h4>
+    <ol>
         <li>
 
             Heat olive oil and 1 tablespoon butter in a large skillet over medium-low heat.<br>
@@ -79,7 +80,7 @@
 
         </li>
     </ol>
-    <a href="../index.html" style="color: #A9C52F">Go back</a>
+    <a href="../index.html">Go back</a>
 
 </body>
 </html>
