--- a/recipes/oatbars.html
+++ b/recipes/oatbars.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin</title>
+    <title>Oat bars</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body style="background-color: #2C5D63;">
+<body>
 
-    <h1 style="color: #F7EEBB">Chocolate-Peanut Butter Oat Bars</h1>
-    <a href="https://www.allrecipes.com/chocolate-peanut-butter-oat-bars-recipe-8722209" style="color: #A9C52F">Recipe website.</a>
+    <h1>Chocolate-Peanut Butter Oat Bars</h1>
+    <a href="https://www.allrecipes.com/chocolate-peanut-butter-oat-bars-recipe-8722209">Recipe website.</a>
     <h1></h1>
     <img width="500" alt="Image of the final product." src="https://www.allrecipes.com/thmb/YRpi6m0to179TBnYZNGBaazNQm0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8722209-Chocolate-Peanut-Butter-Oat-Bars-Allrecipes-Magazine-4x3-adee6164d84043ba83522e752d1d78ca.jpg">
-    <h4 style="color: #F7EEBB">Peanut butter oat bars, Yummy!</h4>
-    <p style="color: #A9C52F"">
+    <h4>Peanut butter oat bars, Yummy!</h4>
+    <p>
 
         Top a buttery oat-pecan-coconut crust with a PB-chocolate drizzle,<br>
         then let little helpers finish off these snackable streusel-topped bars.
 
     </p>
-    <h5 style="color: #F7EEBB">Ingredients:</h5>
-    <ul style="color: #A9C52F">
+    <h4>Ingredients:</h4>
+    <ul>
 
         <li>1 1/2 cups flour</li>
         <li>1 cup rolled oats</li>
@@ -35,8 +36,8 @@
         
     </ul>
 
-    <h5 style="color: #F7EEBB">Steps:</h5>
-    <ol style="color: #A9C52F">
+    <h4>Steps:</h4>
+    <ol>
 
         <li>
 
@@ -88,7 +89,7 @@
         </li>
 
     </ol>
-    <a href="../index.html" style="color: #A9C52F">Go back</a>
+    <a href="../index.html">Go back</a>
 
 </body>
 </html>
