--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: #2C5D63;">
+<body class="main">
 
-    <h1 style="color: #F7EEBB">Odin Recipes</h1>
+    <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/chili.html" style="color: #A9C52F">Go to recipe: Melanie's Chili</a></li>
-        <li><a href="./recipes/caramelizedpasta.html" style="color: #A9C52F">Go to recipe: Caramelized onion pasta</a></li>
-        <li><a href="./recipes/oatbars.html" style="color: #A9C52F">Go to recipe: Chocolate-Peanut Butter Oat Bars </a></li>
+        <li><a href="./recipes/chili.html">Go to recipe: Melanie's Chili</a></li>
+        <li><a href="./recipes/caramelizedpasta.html">Go to recipe: Caramelized onion pasta</a></li>
+        <li><a href="./recipes/oatbars.html">Go to recipe: Chocolate-Peanut Butter Oat Bars </a></li>
 
     </ul>
+
+    
+      
 </body>
 </html>
