--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin</title>
+    <title>Melanie's Chili</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body style="background-color: #2C5D63;">
+<body>
 
-    <h1 style="color: #F7EEBB">Melanie's Chili</h1>
-    <a href="https://www.allrecipes.com/recipe/26438/melanies-chili/" style="color: #A9C52F">Recipe website.</a>
+    <h1>Melanie's Chili</h1>
+    <a href="https://www.allrecipes.com/recipe/26438/melanies-chili/">Recipe website.</a>
     <h1></h1>
     <img width="500" alt="Image of the final product." src="https://www.allrecipes.com/thmb/v1TtdbvJky4e9_wi8PJ0IluACEA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/26438melanies-chiliFranceC4x3-26f8c2a5755941009197c4cedace53c5.jpg">
-    <h4 style="color: #F7EEBB">Fast and easy chili!</h4>
-    <p style="color: #A9C52F"">This chili is so easy to make and is so good! Trust me. To make a double batch,<br>
+    <h4>Fast and easy chili!</h4>
+    <p>This chili is so easy to make and is so good! Trust me. To make a double batch,<br>
         double everything except the meat and onion. Use 1 can each of pinto and<br> 
         kidney beans, that is how I normally make it.</p>
 
-    <h5 style="color: #F7EEBB">Ingredients:</h5>
-    <ul style="color: #A9C52F">
+    <h4>Ingredients:</h4>
+    <ul>
         <li>1 pound ground beef</li>
         <li>1 onion, chopped</li>
         <li>(14.5 ounce) can diced tomatoes</li>
@@ -29,13 +30,13 @@
         <li>1 teaspoon minced garlic</li>
     </ul>
 
-    <h5 style="color: #F7EEBB">Steps:</h5>
-    <ol style="color: #A9C52F">
+    <h4>Steps:</h4>
+    <ol>
         <li>In a large saucepan over medium-high heat, cook beef and onion until meat is no longer pink.</l1>
         <li>Stir in tomatoes, tomato sauce, beans, chili powder, cumin, cayenne and garlic. </li>
         <li>Cover, reduce heat and simmer 20 minutes.</li>
     </ol>
-    <a href="../index.html" style="color: #A9C52F">Go back</a>
+    <a href="../index.html">Go back</a>
 
 </body>
 </html>
