Learned new type of spacing method. Padding, margin and border.

--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -9,9 +9,9 @@
 <body>
 
     <h1>Melanie's Chili</h1>
-    <a href="https://www.allrecipes.com/recipe/26438/melanies-chili/">Recipe website.</a>
-    <h1></h1>
     <img width="500" alt="Image of the final product." src="https://www.allrecipes.com/thmb/v1TtdbvJky4e9_wi8PJ0IluACEA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/26438melanies-chiliFranceC4x3-26f8c2a5755941009197c4cedace53c5.jpg">
+    <p style="margin-bottom: 50px;"><a href="https://www.allrecipes.com/recipe/26438/melanies-chili/">Recipe website.</a></p>
+
     <h4>Fast and easy chili!</h4>
     <p>This chili is so easy to make and is so good! Trust me. To make a double batch,<br>
         double everything except the meat and onion. Use 1 can each of pinto and<br> 
