--- a/recipes/oatbars.html
+++ b/recipes/oatbars.html
@@ -9,9 +9,8 @@
 <body>
 
     <h1>Chocolate-Peanut Butter Oat Bars</h1>
-    <a href="https://www.allrecipes.com/chocolate-peanut-butter-oat-bars-recipe-8722209">Recipe website.</a>
-    <h1></h1>
     <img width="500" alt="Image of the final product." src="https://www.allrecipes.com/thmb/YRpi6m0to179TBnYZNGBaazNQm0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8722209-Chocolate-Peanut-Butter-Oat-Bars-Allrecipes-Magazine-4x3-adee6164d84043ba83522e752d1d78ca.jpg">
+    <p style="margin-bottom: 50px;"><a href="https://www.allrecipes.com/chocolate-peanut-butter-oat-bars-recipe-8722209">Recipe website.</a></p>
     <h4>Peanut butter oat bars, Yummy!</h4>
     <p>
 
