CSS styling, mostly titles changes.

--- a/recipes/caramelizedpasta.html
+++ b/recipes/caramelizedpasta.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Caramelized onion pasta</h1>
+    <h1 style="width: 465px;">Caramelized onion pasta</h1>
     <img width="500" alt="Image of the final product." src="https://www.allrecipes.com/thmb/s6yaAIOG_R9gl9Tagwi0OWGm5hA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8733449_Caramelized-Onion-Pasta_Pat-Bernitt_4x3-bca65b41c4334deea938c808488d4ec3.jpg">
     <p style="margin-bottom: 50px;"><a href="https://www.allrecipes.com/caramelized-onion-pasta-recipe-8733449">Recipe website.</a></p>
     <h4>Delicious caramelized onion pasta for everyone (that likes onion...)</h4>
@@ -80,6 +80,8 @@
         </li>
     </ol>
     <a href="../index.html">Go back</a>
+
+    <div class="box-one"></div>
 
 </body>
 </html>
