--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Melanie's Chili</h1>
+    <h1 style="width: 300px;">Melanie's Chili</h1>
     <img width="500" alt="Image of the final product." src="https://www.allrecipes.com/thmb/v1TtdbvJky4e9_wi8PJ0IluACEA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/26438melanies-chiliFranceC4x3-26f8c2a5755941009197c4cedace53c5.jpg">
     <p style="margin-bottom: 50px;"><a href="https://www.allrecipes.com/recipe/26438/melanies-chili/">Recipe website.</a></p>
 
@@ -37,6 +37,8 @@
         <li>Cover, reduce heat and simmer 20 minutes.</li>
     </ol>
     <a href="../index.html">Go back</a>
+
+    <div class="box-one"></div>
 
 </body>
 </html>
