--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="main">
 
-    <h1>Odin Recipes</h1>
+    <h1 style="width: 255px;">Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/chili.html">Go to recipe: Melanie's Chili</a></li>
         <li><a href="./recipes/caramelizedpasta.html">Go to recipe: Caramelized onion pasta</a></li>
@@ -16,7 +16,7 @@
 
     </ul>
 
-    
-      
+    <div class="box-one"></div>
+
 </body>
 </html>
